Created StockfishRunner class for testing purposes